--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,10 +4,27 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Node.js Starter</title>
+    <title>ES6 Course Weather App</title>
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-<h1>Hello!</h1>
-<p>If you can see this text, your server is running properly.</p>
+<header>
+    <h1>The Super Awesome Weather App</h1>
+</header>
+<div class="main">
+    <div id="search">
+        <label for="city">City Name</label>
+        <input type="text" id="city">
+        <button type="button">Show Weather!</button>
+    </div>
+    <div id="load">Loading...</div>
+    <div id="weather">
+        <h1 id="weatherCity">City Name</h1>
+
+        <div id="weatherDescription">Weather Description</div>
+        <div id="weatherTemperature">Temperature</div>
+
+    </div>
+</div>
 </body>
 </html>
